<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquake">No earthquakes found.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="item_settings_menu">Settings</string>
    <string name="setting_tittle">Earthquake Settings</string>

    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <string name="settings_limit_earthquakes_label">Limit earthquakes</string>
    <string name="settings_limit_earthquakes_key" translatable="false">limit_earthquakes</string>
    <string name="settings_limit_earthquakes_default" translatable="false">20</string>

    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default">@string/settings_order_by_magnitude_value</string>

    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <string name="settings_order_by_time_label">Time</string>
    <string name="settings_order_by_time_value" translatable="false">time</string>
</resources>
