<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting_tittle">

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_earthquakes_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_earthquakes_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_earthquakes_label" />

    <ListPreference
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:defaultValue="@string/settings_order_by_default"
        android:title="@string/settings_order_by_label" />
</PreferenceScreen>